crates/anvil-cli/src/tui/layouts/snapshots/anvil__tui__layouts__journal__tests__journal_no_tabs__120x40.snap
---
source: crates/anvil-cli/src/tui/layouts/journal.rs
assertion_line: 727
expression: rendered
---
 main · v2.2.17 · claude-sonnet-4-6






































 ▌ ctrl-k for command palette · ↑ history · enter to send
