crates/anvil-cli/src/tui/layouts/snapshots/anvil__tui__layouts__journal__tests__journal_no_tabs__80x24.snap
---
source: crates/anvil-cli/src/tui/layouts/journal.rs
expression: rendered
---
 main · v2.2.16 · claude-sonnet-4-6






















 ▌ ctrl-k for command palette · ↑ history · enter to send
